--- a/index.html
+++ b/index.html
@@ -5,11 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="index.css">
+  <script src="index.js" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" charset="utf-8"></script>
+  <script src="parallax.js" charset="utf-8"></script>
   <title>thecamtalk</title>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
-<body>
+<body id="bod">
 
-  <h1>SAB MOH MAYA HAI</h1>
+  <div id="wrap" class="wrap" onclick="transition()">
+    <div class="main">
+      <div class="branding">
+        <div class="logo"></div>
+        <div class="logotype"></div>
+      </div>
+      <div class="shadow"></div>
+    </div>
+    <div class="funcs">
+      <div class="mail-link">Mail us a photo</div>
+      <p>and we'll edit it for you !</p>
+      <h1>Hire us</h1>
+    </div>
+	</div>
+  <div  id="gallery" class="gallery">
+    <marquee>G  A  L  L  E  R  Y  G  A  L  L  E  R  Y  G  A  L  L  E  R  Y  G  A  L  L  E  R  Y  G  A  L  L  E  R  Y</marquee>
+    <img src="pic1.jpg" alt="">
+    <img src="pic2.jpg" alt="">
+    <img src="pic3.jpg" alt="">
+    <img src="pic4.jpg" alt="">
+    <img src="pic5.jpg" alt="">
+    <img src="pic6.jpg" alt="">
+    <img src="pic7.jpg" alt="">
+  </div>
+  </div>
+
+  <!-- Scripts -->
+	<script src="./parallax.js"></script>
+	<script>
+	var scene = document.getElementById('scene');
+	var parallax = new Parallax(scene);
+  function transition(){
+    var element = document.getElementById("gallery");
+        element.classList.add("appear");
+    var element2 = document.getElementById("wrap");
+        element2.classList.add("dim");  }
+	</script>
 
 </body>
 </html>
